--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
         />
-        <title>CVL - Relatórios de Internamentos</title>
+        <title>CVL - Hospitalização</title>
     </head>
     <body>
         <div id="app"></div>
