--- a/index.html
+++ b/index.html
@@ -2,13 +2,19 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" href="/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="theme-color" content="#ffffff" />
         <link
             rel="stylesheet"
             href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
         />
+        <link rel="icon" href="/favicon.ico" />
         <title>CVL - Hospitalização</title>
+        <link
+            rel="apple-touch-icon"
+            href="/src/assets/icons/cvl-apple-touch-icon.png"
+            sizes="180x180"
+        />
     </head>
     <body>
         <div id="app"></div>
