--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
         />
         <link rel="icon" href="/favicon.ico" />
         <title>CVL - Hospitalização</title>
+        <link rel="apple-touch-icon" href="./img/cvl-apple-touch-icon.png" sizes="180x180" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
-            rel="apple-touch-icon"
-            href="./img/cvl-apple-touch-icon.png"
-            sizes="180x180"
+            href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&family=Roboto:wght@300;400;500;700&display=swap"
+            rel="stylesheet"
         />
     </head>
     <body>
