--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
             href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&family=Roboto:wght@300;400;500;700&display=swap"
             rel="stylesheet"
         />
+        <meta property="og:title" content="Centro Veterinário de Luanda" />
+        <meta property="og:description" content="" />
+        <meta property="og:image" content="https://hospital.luanda.vet/img/cvl-192x192.png" />
+        <meta property="og:url" content="https://hospital.luanda.vet" />
     </head>
     <body>
         <div id="app"></div>
