--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             rel="stylesheet"
         />
         <meta property="og:title" content="Centro Veterinário de Luanda" />
-        <meta property="og:description" content="" />
+        <meta property="og:description" content="CVL - Zona de Internamentos" />
         <meta property="og:image" content="https://hospital.luanda.vet/img/cvl-192x192.png" />
         <meta property="og:url" content="https://hospital.luanda.vet" />
     </head>
