--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <link rel="apple-touch-icon" href="./img/cvl-apple-touch-icon.png" sizes="180x180" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link rel="manifest" href="/manifest.json" />
         <link
             href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&family=Roboto:wght@300;400;500;700&display=swap"
             rel="stylesheet"
